--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 make - запуск всего (localhost:8080) 
 
 Второй вариант это go run main.go из папки cmd
+
+CREATE TABLE users (
+  id SERIAL PRIMARY KEY,
+  username VARCHAR(255) UNIQUE NOT NULL,
+  password VARCHAR(255) NOT NULL
+);
